--- a/visualization/dl-sherlock-app/src/components/imageList/ImageList.css
+++ b/visualization/dl-sherlock-app/src/components/imageList/ImageList.css
@@ -2,3 +2,8 @@
     max-height: 100%;
     max-width: 100%;
 }
+
+.category {
+  background: #ffffff;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.4),0 3px 1px -2px rgba(0,0,0,.4),0 1px 5px 0 rgba(0,0,0,.4);  
+}
