added text to images

--- a/visualization/dl-sherlock-app/src/components/imageChart/D3Chart.css
+++ b/visualization/dl-sherlock-app/src/components/imageChart/D3Chart.css
@@ -1,6 +1,10 @@
 .chartClass {  
-  width:800px;
-  height:600px;
+  width:1280px;
+  height:900px;
+}
+
+.redText {
+    color:red;
 }
 
 .rectClass {
